# SimpleSearchEngine

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  IndexingFile.cpp  IndexingFile.h  Parser.cpp  Parser.h  SearchEngine.cpp  SearchEngine.h
tests/: CMakeLists.txt  browser_tests.cpp
